# botclientcpp

./: .gitignore  .gitmodules  Doxyfile  README.md
include/: IncomingMsg.h  rapidjson
tests/: CMakeLists.txt  Makefile  catch  test_pistache.cpp  test_rapidjson.cpp
